--- a/op.yml
+++ b/op.yml
@@ -1,6 +1,12 @@
 ---
 name: github.com/opspec-pkgs/docker.build.localimage
-description: build image that stores on host machines docker image store
+description: |
+  Builds image that stores on host machines docker image store.
+  * `dockerSocket` must be the correct socket path to the host machine's `dockerd` runtime socket IE `/var/run/docker.sock` (default path). For linux, you can try `netstat -lx | grep docker | grep -Po '/.*docker.sock'` to verify the proper socket file.
+  * `imageName` is the name of the image you want to give the resultant image for `docker build`
+  * `dockerfile` is the path to (including) the Dockerfile from which you will build the image.
+
+  Once a successful run of this op completes, you should see your new container created on the host machine using `docker images`.
 inputs:
   dockerfile:
     file:
