--- a/op.yml
+++ b/op.yml
@@ -1,5 +1,6 @@
 ---
 name: github.com/opspec-pkgs/docker.build.localimage
+version: 1.1.1
 description: |
   Build a docker image in your host machines docker image store. Once a successful run of this op completes, you should see your new container created on the host machine when you run `docker images`.
 
@@ -65,6 +66,12 @@ inputs:
         The name (tag) of the built image. e.g. "container_name:latest".
 run:
   serial:
+  - op:
+      ref: github.com/opspec-pkgs/docker.config.clean#1.0.0
+      inputs:
+        dockerConfig:
+      outputs:
+        dockerConfigCleaned: $(dockerConfig)
   - container:
       image: { ref: 'docker:18.09.0-dind' }
       files:
@@ -81,5 +88,3 @@ run:
           cat /Dockerfile | docker image build \
             --progress plain \
             -t "$imageName" -
-
-version: 1.1.0
