--- a/op.yml
+++ b/op.yml
@@ -1,6 +1,6 @@
 ---
 name: github.com/opspec-pkgs/docker.build.localimage
-version: 1.1.3
+version: 1.2.0
 description: |
   Build a docker image in your host machines docker image store. Once a successful run of this op completes, you should see your new container created on the host machine when you run `docker images`.
 
@@ -8,7 +8,7 @@ description: |
 
   ```yml
     op:
-      ref: github.com/opspec-pkgs/docker.build.localimage#1.1.3
+      ref: github.com/opspec-pkgs/docker.build.localimage#1.2.0
       inputs:
         imageName: my-image
         dockerfile: $(/Dockerfile)
@@ -21,7 +21,7 @@ description: |
 
   ```yml
     op:
-      ref: github.com/opspec-pkgs/docker.build.localimage#1.1.3
+      ref: github.com/opspec-pkgs/docker.build.localimage#1.2.0
       inputs:
         imageName: my-image
         dockerfile: $(/Dockerfile)
@@ -34,6 +34,11 @@ inputs:
       description: |
         The path the Dockerfile from which you will build the image or a directory containing one named `Dockerfile`.
       default: .
+  build:
+    boolean:
+      description: |
+        Build the image even if it already exists
+      default: true
   dockerSocket:
     socket:
       description: |
@@ -81,10 +86,19 @@ run:
         /var/run/docker.sock: dockerSocket
       envVars:
         imageName: $(imageName)
+        build: $(build)
       cmd:
         - sh
         - -ce
         - |
+          if [ "$build" = false ]; then \
+            docker inspect $imageName 1> /dev/null 2> /dev/null; \
+            if [ $? -eq 0 ]; then \
+              echo "Skipping image build due to $imageName already existing"; \
+              exit 0; \
+            fi; \
+          fi; \
           cat /Dockerfile | docker image build \
             --progress plain \
             -t "$imageName" -
+          
