--- a/op.yml
+++ b/op.yml
@@ -1,6 +1,6 @@
 ---
 name: github.com/opspec-pkgs/docker.build.localimage
-version: 1.1.3
+version: 1.2.0
 description: |
   Build a docker image in your host machines docker image store. Once a successful run of this op completes, you should see your new container created on the host machine when you run `docker images`.
 
@@ -8,10 +8,11 @@ description: |
 
   ```yml
     op:
-      ref: github.com/opspec-pkgs/docker.build.localimage#1.1.3
+      ref: github.com/opspec-pkgs/docker.build.localimage#1.2.0
       inputs:
         imageName: my-image
         dockerfile: $(/Dockerfile)
+        dockerfileStage: my-stage-name
         dockerSocket:
         dockerConfig:
           auths:
@@ -21,10 +22,11 @@ description: |
 
   ```yml
     op:
-      ref: github.com/opspec-pkgs/docker.build.localimage#1.1.3
+      ref: github.com/opspec-pkgs/docker.build.localimage#1.2.0
       inputs:
         imageName: my-image
         dockerfile: $(/Dockerfile)
+        dockerfileStage: my-stage-name
         dockerSocket:
         dockerConfig: $(HOME/.docker/config.json)
   ```
@@ -34,6 +36,10 @@ inputs:
       description: |
         The path the Dockerfile from which you will build the image or a directory containing one named `Dockerfile`.
       default: .
+  dockerfileStage:
+    string:
+      description: |
+        The stage in your dockerfile to build (i.e. what `FROM` statement to build).
   dockerSocket:
     socket:
       description: |
@@ -73,18 +79,18 @@ run:
       outputs:
         dockerConfigCleaned: $(dockerConfig)
   - container:
-      image: { ref: 'docker:18.09.0-dind' }
+      image: { ref: 'docker:28.0.1-dind' }
       files:
         /Dockerfile: $(dockerfile)
         /root/.docker/config.json: $(dockerConfig)
       sockets:
         /var/run/docker.sock: dockerSocket
-      envVars:
-        imageName: $(imageName)
       cmd:
         - sh
         - -ce
         - |
           cat /Dockerfile | docker image build \
             --progress plain \
-            -t "$imageName" -
+            --tag "$(imageName)" \
+            \$([ -z "$(dockerfileStage)" ] || printf -- "--target $(dockerfileStage)") \
+            -
